# nextcloud-tasks

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: test-todo.yml
examples/: nc-tasks.py  printTodoTable.py  test.py
src/nextcloudtasks/: nextcloudtasks.py
tests/: test_todo.py
