[metadata]
name = nextcloudtasks
version = 0.0.1
author = Manuel Mancera
author_email = manu@unam.re
description = A Nextcloud Tasks API wrapper with some useful examples for CLI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sinkmanu/nextcloud-tasks
project_urls =
    Bug Tracker = https://github.com/sinkmanu/nextcloud-tasks/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = GPL

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
scripts = examples/nc-tasks.py

[options.packages.find]
where = src
